[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/player/FloatingPlayer.gd" type="Script" id=1]
[ext_resource path="res://scenes/player_ui/PauseScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player_ui/GameWonScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player_ui/GameOverScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/player_ui/TypewriterDialogScene.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape" id=1]

[node name="FloatingPlayer" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )
shape = SubResource( 1 )

[node name="PlayerCamera" type="Camera" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerCamera"]

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -3 )
collide_with_areas = true

[node name="UI" type="Node" parent="."]

[node name="Pause" type="Node" parent="UI"]

[node name="PauseScene" parent="UI/Pause" instance=ExtResource( 2 )]
visible = false

[node name="GameEnd" type="Node" parent="UI"]

[node name="GameWonScene" parent="UI/GameEnd" instance=ExtResource( 3 )]
visible = false

[node name="GameOverScene" parent="UI/GameEnd" instance=ExtResource( 4 )]
visible = false

[node name="PlayerUI" type="Node2D" parent="UI"]

[node name="TypewriterDialog" parent="UI/PlayerUI" instance=ExtResource( 5 )]
